--- a/Day-03/DatabaseWithExample/package.json
+++ b/Day-03/DatabaseWithExample/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "mongoose": "^8.8.4"
   },
@@ -7,7 +8,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon index.js"
   },
