add multer middleware for file uploads and include cookie-parser in app setup

--- a/Projects/01_videoTube/package.json
+++ b/Projects/01_videoTube/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "vidtube",
-  "version": "1.0.0",
-  "description": "A project inspired by YouTube",
-  "main": "src/index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon src/index.js"
-  },
-  "author": "Abhishek",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.1.7",
-    "prettier": "^3.4.2"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.4",
-    "mongoose-aggregate-paginate-v2": "^1.1.2"
-  }
+    "name": "vidtube",
+    "version": "1.0.0",
+    "description": "A project inspired by YouTube",
+    "main": "src/index.js",
+    "type": "module",
+    "scripts": {
+        "dev": "nodemon src/index.js"
+    },
+    "author": "Abhishek",
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^3.1.7",
+        "prettier": "^3.4.2"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.8.4",
+        "mongoose-aggregate-paginate-v2": "^1.1.2",
+        "multer": "^1.4.5-lts.1"
+    }
 }
